# Philosophe

./: CMakeLists.txt  Makefile  README.md  sources.mk
includes/: extern.h  philo_struct.h  philosophers.h  philosophers_states.h  table.h
sources/: command_line.c  main.c  philosophers.c  philosophers_states.c  philosophers_utils.c  table.c  table_extend.c
